added theme installer for settings theme repo view

--- a/src/Cms/CoreBundle/Resources/views/Settings/themeCurrent.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Settings/themeCurrent.html.twig
@@ -27,7 +27,8 @@
                 </div>
             {% else %}
                 <div id="theme-settings">
-                    create theme settings
+                    <img src="{{ theme.image }}" alt="" class="theme-image" style="max-width: 300px;"/>
+                    <h3>{{ theme.name }}</h3>
                 </div>
             {% endif %}
         </div>
