added content type manager and wizard

--- a/src/Cms/CoreBundle/Resources/views/App/components.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/components.html.twig
@@ -88,6 +88,7 @@
         <li><a href="#"><i class="icon-comments"></i> Comments</a></li>
         <li class="divider"></li>
         <li><a href="{{ path('cms_core.settings_theme_current', {'siteId':site.id}) }}"><i class="icon-eye-open"></i> Theme</a></li>
+        <li><a href="{{ path('cms_core.content_manager_readAll', {'siteId':site.id}) }}"><i class="icon-book"></i> Content</a></li>
         <li><a href="{{ path('cms_core.template_menu', {'siteId':site.id}) }}"><i class="icon-list-ul"></i> Menus</a></li>
         <li><a href="{{ path('cms_core.site_settings', {'id':site.id | default()}) }}"><i class="icon-cog"></i> Settings</a></li>
         <li><a href="#"><i class="icon-group"></i> Users</a></li>
