--- a/src/Cms/CoreBundle/Resources/views/ContentManager/wizardComponents.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentManager/wizardComponents.html.twig
@@ -35,35 +35,38 @@
                     <h4 class="todo-name">
                         <strong>Basic Info</strong>
                     </h4>
-                    <span>Name, Slug, Domains, Locales</span>
+                    <span>Name, Slug, Description</span>
                 </div>
             </li>
             <li class="{% if contentType and contentType.formats|length > 0 %}todo-done{% endif %}" id="todo-formats">
                 <div class="todo-icon"><i class="icon-puzzle-piece"></i></div>
                 <div class="todo-content">
                     <h4 class="todo-name">
-                        <strong>Formats</strong>
+                        <strong>Format</strong>
                     </h4>
-                    Loops, Singles, Statics
+                    Dynamic or Static?
                 </div>
             </li>
-            <li class="{% if contentType and contentType.formats|length > 1%}todo-done{% endif %}" id="todo-loop">
-                <div class="todo-icon"><i class="icon-list-alt"></i></div>
-                <div class="todo-content">
-                    <h4 class="todo-name">
-                        <strong>The Loop</strong>
-                    </h4>
-                    <span>Traverse Node Collections</span>
-                </div>
-            </li>
-            {% if contentType and contentType.formats|length > 0 %}
-                <div class="nav-layouts">
-                    {% for format in contentType.formats  %}
-                        <h4>
-                            <a href="#layoutOpen">{{ format }}</a>
+            {% if contentType.formats is not defined or 'loop' in contentType.formats %}
+                <li class="{% if contentType and contentType.formats|length > 1%}todo-done{% endif %}" id="todo-loop">
+                    <div class="todo-icon"><i class="icon-list-alt"></i></div>
+                    <div class="todo-content">
+                        <h4 class="todo-name">
+                            <strong>The Loop</strong>
                         </h4>
-                    {% endfor %}
-                </div>
+                        <span>Traverse Node Collections</span>
+                    </div>
+                </li>
+            {% elseif 'static' in contentType.formats %}
+                <li class="{% if contentType %}todo-done{% endif %}" id="todo-static">
+                    <div class="todo-icon"><i class="icon-list-alt"></i></div>
+                    <div class="todo-content">
+                        <h4 class="todo-name">
+                            <strong>Static Page</strong>
+                        </h4>
+                        <span>Create the Template</span>
+                    </div>
+                </li>
             {% endif %}
             <li id="todo-complete">
                 <div class="todo-icon"><i class="icon-trophy"></i></div>
