added contentType static wizard

--- a/src/Cms/CoreBundle/Resources/views/ContentManager/wizardComponents.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentManager/wizardComponents.html.twig
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block title %}
-    {{ contentType.name|default('New') }} Content Type {{ parent() }}
+    {{ contentType.name|default('New')|title }} Content Type {{ parent() }}
 {% endblock %}
 
 {% block todo %}
