--- a/src/Cms/CoreBundle/Resources/views/Template/menu.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Template/menu.html.twig
@@ -11,7 +11,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="/dependencies/ace-builds-master/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/dependencies/ace-builds-master/src-min-noconflict/ace.js"></script>
     {% javascripts
         '@CmsCoreBundle/Resources/public/js/template/aceEditor.js'
         '@CmsCoreBundle/Resources/public/js/template/includes.js'
