--- a/src/Cms/CoreBundle/Resources/views/App/components.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/components.html.twig
@@ -80,9 +80,11 @@
         <li class="divider"></li>
         <li><a href="#"><i class="icon-pushpin"></i> Posts</a></li>
         {% for contentType in site.contentTypes   %}
-            <li><a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id}) }}"><i class="icon-pushpin"></i> {{ contentType.name | title }}</a></li>
+            {% if 'single' in contentType.formats %}
+                <li><a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id}) }}"><i class="icon-pushpin"></i> {{ contentType.name | title }}</a></li>
+            {% endif %}
         {% endfor %}
-        <li><a href="#"><i class="icon-file-text"></i> Pages</a></li>
+        <li><a href="{{ path('cms_core.content_manager_static_readAll', {'siteId':site.id}) }}"><i class="icon-file-text"></i> Pages</a></li>
         <li class="divider"></li>
         <li><a href="{{ path('cms_core.media_readAll', {'siteId':site.id}) }}"><i class="icon-camera-retro"></i> Media</a></li>
         <li><a href="#"><i class="icon-comments"></i> Comments</a></li>
