--- a/src/Cms/CoreBundle/Resources/views/Asset/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Asset/edit.html.twig
@@ -1,24 +1,65 @@
 {% extends 'CmsCoreBundle:App:base.html.twig' %}
 
-{% block body %}
-    <article>
-        <h1>Asset {{ asset.name | default() }}</h1>
-        {% block notices %}{{ parent() }}{% endblock %}
-        <form action="{{ path('cms_core.asset_save') }}" method="post">
-            <input type="hidden" name="token" value="{{ token }}"/>
-            <input type="hidden" name="id" value="{{ asset.id | default() }}"/>
-            <input type="hidden" name="siteId" value="{{ site.id | default() }}"/>
-            {{ site.namespace }}:Master:<input type="text" name="name" placeholder="name" value="{{ assetName | default() }}" required/>
-            <input type="radio" name="ext" value="css" id='radioExtCss' {% if asset is defined %}{% if asset.ext == 'css' %}checked{% endif %}{% endif %} required/><label for="radioExtCss">stylesheet</label>
-            <input type="radio" name="ext" value="js" id="radioExtJs" {% if asset is defined %}{% if asset.ext == 'js' %}checked{% endif %}{% endif %} required/><label for="radioExtJs">javascript</label>
-            <div>
-                <textarea name="content" id="content" cols="100" rows="30" required>{{ asset.content | default() }}</textarea>
-            </div>
-            <input type="submit" value="Save"/>
-        </form>
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets
+        '@CmsCoreBundle/Resources/public/css/asset/edit.css'
+        filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}"/>
+    {% endstylesheets %}
+{% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    <script src="/dependencies/ace-builds-master/src-min-noconflict/ace.js"></script>
+    {% javascripts
+        'flat-ui/js/flatui-radio.js'
+        '@CmsCoreBundle/Resources/public/js/assets/aceAssetEditor.js'
+        '@CmsCoreBundle/Resources/public/js/assets/edit.js'
+        %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
+
+{% block title %}
+    New Asset {{ parent() }}
+{% endblock %}
+
+{% block content %}
+    <article>
+        <section class="row-fluid">
+            {% if asset.name is defined %}
+                <h1>{{ asset.name }}</h1>
+            {% else %}
+                <h1>Create a New Asset</h1>
+            {% endif %}
+            {% block notices %}{{ parent() }}{% endblock %}
+            <div id="error-container"></div>
+            <form action="{{ path('cms_core.asset_save') }}" method="POST" id="asset-form">
+                <input type="hidden" name="token" value="{{ token }}"/>
+                <input type="hidden" name="id" id="input-id" value="{{ asset.id | default() }}"/>
+                <input type="hidden" name="siteId" id="input-site-id" value="{{ site.id | default() }}"/>
+                <input type="hidden" name='ext' id="input-ext" value="{{ asset.ext|default() }}"/>
+                <div id="asset-type" class="{% if asset is defined %}hide{% endif %}">
+                    <p>Select an asset type:</p>
+                    <label class="radio radio-asset-type" id="label-radio-ext-css">
+                        <input type="radio" name="ext" value="css" id='radio-ext-css' data-toggle="radio" {% if asset is defined %}{% if asset.ext == 'css' %}checked{% endif %}{% endif %} required/>Stylesheet
+                    </label>
+                    <label class="radio radio-asset-type" id="label-radio-ext-js">
+                        <input type="radio" name="ext" value="js" id="radio-ext-js" data-toggle="radio" {% if asset is defined %}{% if asset.ext == 'js' %}checked{% endif %}{% endif %} required/>Javascript
+                    </label>
+                </div>
+                <label for="input-name" id="label-input-name">Asset Name:</label>
+                <input type="text" name="name" id="input-name" class="span9" placeholder="name" value="{{ assetName | default() }}" required/>
+                <p>Code:</p>
+                <div id='input-code-content'>{{ asset.content|default() }}</div>
+                <button class="btn btn-info pull-right save-code">Save</button>
+            </form>
+        </section>
         {% if history is defined %}
-            <section>
+        <section class="row-fluid">
+            <hr>
+            <div class="span12">
                 <h3>History</h3>
                 <ul>
                     {% for history in history  %}
@@ -27,10 +68,12 @@
                         <li>no history found</li>
                     {% endfor %}
                 </ul>
-            </section>
+            </div>
+        </section>
         {% endif %}
     </article>
-    <nav>
-        <a href="{{ path('cms_core.asset_readAll', {'siteId':site.id}) }}">Back to Assets</a>
-    </nav>
+    {% block footer %}
+        {{ parent() }}
+    {% endblock %}
+    <input type="hidden" id="save-code-path" value="{{ path('cms_core.asset_save') }}"/>
 {% endblock %}
