added loopSlugs to node document and tests for adding and removing methods

--- a/src/Cms/CoreBundle/Resources/views/ContentManager/wizardLoop.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentManager/wizardLoop.html.twig
@@ -26,7 +26,7 @@
                     <div class="row-fluid">
                         <div class="wizard-body span12">
                             <h3>The Loop</h3>
-                            <p>The loop is a page which displays a list of nodes belonging to this content type. Set it up by completing the form below.</p>
+                            <p>A loop is a page which displays a list of nodes belonging to this content type. You can setup many different loops, each one having its own locale, domain and taxonomy style. Setup your loops by completing the forms below.</p>
                             <div class="wizard-body-item theme-basic flat-form-container">
                                 <form id="contentType-format-form" class="wizard-form">
                                     <input type="hidden" id="input-node-id" value="{{ node.id|default() }}"/>
