--- a/src/Cms/CoreBundle/Resources/views/ContentManager/wizardComponents.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentManager/wizardComponents.html.twig
@@ -52,7 +52,7 @@
                     <div class="todo-icon"><i class="icon-list-alt"></i></div>
                     <div class="todo-content">
                         <h4 class="todo-name">
-                            <strong>The Loop</strong>
+                            <strong>The Loops</strong>
                         </h4>
                         <span>Traverse Node Collections</span>
                     </div>
