--- a/src/Cms/CoreBundle/Resources/views/ContentManager/wizardLoop.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentManager/wizardLoop.html.twig
@@ -1,5 +1,14 @@
 {% extends 'CmsCoreBundle:ContentManager:wizardComponents.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets
+        '@CmsCoreBundle/Resources/public/css/contentManager/wizardLoop.css'
+        filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}"/>
+    {% endstylesheets %}
+{% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
     {% javascripts
@@ -25,24 +34,53 @@
                     {% endblock %}
                     <div class="row-fluid">
                         <div class="wizard-body span12">
-                            <h3>The Loop</h3>
-                            <p>A loop is a page which displays a list of nodes belonging to this content type. You can setup many different loops, each one having its own locale, domain and taxonomy style. Setup your loops by completing the forms below.</p>
-                            <div class="wizard-body-item theme-basic flat-form-container">
-                                <form id="contentType-format-form" class="wizard-form">
-                                    <input type="hidden" id="input-node-id" value="{{ node.id|default() }}"/>
-                                    <label for="input-slug">Slug:</label>
-                                    <input type="text" name='slug' id="input-slug" class="span12" placeholder="example/view-all" value="{{ node.slug|default() }}"/>
-                                    <label for="input-title">Title:</label>
-                                    <input type="text" name="title" id="input-title" class="span12" placeholder="Title example" value="{{ node.title|default() }}"/>
-                                    <label for="input-defaultLimit">Default Limit:</label>
-                                    <input type="text" name="defaultLimit" id="input-defaultLimit" class="span12" placeholder="20" value="{{ node.defaultLimit|default(20) }}"/>
-                                    <label for="input-locale">Locale:</label>
-                                    <input type="text" name="locale" id="input-locale" class="span12" placeholder="en-us" value="{{ node.locale|default() }}"/>
-                                    <label for="input-domain">Domain:</label>
-                                    <input type="text" name="domain" id="input-domain" class="span12" placeholder="www.domainname.com" value="{{ node.domain|default() }}"/>
-                                    <label for="input-description">Description:</label>
-                                    <textarea name="description" id="input-description" rows="4" class="span12" placeholder="Meta Description">{{ node.description|default() }}</textarea>
-                                </form>
+                            <div class="row-fluid">
+                                <div class="span12">
+                                    <div class="selector-buttons pull-right">
+                                        <a href="#switch" class="switch-loop"><i class="icon-exchange"></i> Switch Loop</a>
+                                        <span class="vertical-divider">|</span>
+                                        <a href="{{ path('cms_core.content_manager_wizard_loop', {'siteId':site.id, 'contentTypeId':contentType.id, 'newLoop':true}) }}" class="add-new-loop"><i class="icon-plus-sign"></i> Add New</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row-fluid {% if node or newLoop %}hide{% endif %}" id="loop-selector">
+                                <div class="span12">
+                                    {% for loopData in contentType.loops  %}
+                                        <h4 class="loop-item">
+                                            <a href="{{ path('cms_core.content_manager_wizard_loop', {'siteId': site.id, 'contentTypeId':contentType.id, 'domain':loopData.domain, 'locale': loopData.locale, 'slug':loopData.slug}) }}">{{ loopData.domain }} {{ loopData.locale|default() }} {{ loopData.slug }}</a>
+                                            <button class="btn btn-mini btn-danger delete-loop" data-loop-id="{{ loopData.id }}"><i class="icon-trash"></i></button>
+                                        </h4>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            {% if node or contentType.loops|length == 0 or newLoop %}
+                                <div class="row-fluid">
+                                    <div class="span12">
+                                        <div class="loop-container">
+                                            <h3>{{ node.slug|default('The')|title }} Loop</h3>
+                                            {% if node.slug is not defined %}
+                                                <p>A loop is a page which displays a list of nodes belonging to this content type. You can setup many different loops, each one having its own locale, domain and taxonomy style. Setup your loops by completing the forms below.</p>
+                                            {% endif %}
+                                            <div class="wizard-body-item theme-basic flat-form-container">
+                                                <form id="contentType-format-form" class="wizard-form">
+                                                    <input type="hidden" id="input-node-id" value="{{ node.id|default() }}"/>
+                                                    <label for="input-slug">Slug:</label>
+                                                    <input type="text" name='slug' id="input-slug" class="span12" placeholder="example/view-all" value="{{ node.slug|default() }}"/>
+                                                    <label for="input-title">Title:</label>
+                                                    <input type="text" name="title" id="input-title" class="span12" placeholder="Title example" value="{{ node.title|default() }}"/>
+                                                    <label for="input-defaultLimit">Default Limit:</label>
+                                                    <input type="text" name="defaultLimit" id="input-defaultLimit" class="span12" placeholder="20" value="{{ node.defaultLimit|default(20) }}"/>
+                                                    <label for="input-locale">Locale:</label>
+                                                    <input type="text" name="locale" id="input-locale" class="span12" placeholder="en-us" value="{{ node.locale|default() }}"/>
+                                                    <label for="input-domain">Domain:</label>
+                                                    <input type="text" name="domain" id="input-domain" class="span12" placeholder="www.domainname.com" value="{{ node.domain|default() }}"/>
+                                                    <label for="input-description">Description:</label>
+                                                    <textarea name="description" id="input-description" rows="4" class="span12" placeholder="Meta Description">{{ node.description|default() }}</textarea>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                            {% endif %}
                             </div>
                         </div>
                     </div>
@@ -62,5 +100,7 @@
     <input type="hidden" id="site-id" value="{{ site.id }}"/>
     <input type="hidden" id="input-contentType-id" value="{{ contentType.id|default() }}"/>
     <input type="hidden" id="save-path" value="{{ path('cms_core.content_manager_wizard_loop_save', {'siteId':site.id, 'contentTypeId':contentType.id}) }}"/>
+    <input type="hidden" id="delete-path" value="{{ path('cms_core.content_manager_delete') }}"/>
+    <input type="hidden" id="delete-loop-path" value="{{ path('cms_core.content_manager_wizard_loop_delete', {'siteId':site.id, 'contentTypeId':contentType.id}) }}"/>
     <input type="hidden" id="base-url" value="{{ app.request.baseUrl }}"/>
 {% endblock %}
