--- a/src/Cms/CoreBundle/Resources/views/Site/new.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Site/new.html.twig
@@ -1,4 +1,5 @@
-{% extends '::base.html.twig' %}
+{#{% extends '::base.html.twig' %}#}
+{% extends 'CmsCoreBundle:App:components.html.twig' %}
 
 {% block javascripts %}
     {{ parent() }}
@@ -9,44 +10,64 @@
     {% endjavascripts %}
 {% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets
+        '@CmsCoreBundle/Resources/public/css/site/new.css'
+        filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}"/>
+    {% endstylesheets %}
+{% endblock %}
+
 {% block title %}
     Create Site {{ parent() }}
 {% endblock %}
 
 {% block body %}
+    {% block classicNavPrimary %}
+        {{ parent() }}
+    {% endblock %}
     <div class="container">
-        <div class="row-fluid">
-            <div class="span12">
-                <h1>Create a New Site on PipeStack</h1>
-                <p>Fill out the form below to create a new PipeStack site. You can also <a href="#help">get help</a> or <a href="#contact">contact us</a>.</p>
+        <div id="primary-container">
+            <div class="row-fluid">
+                <div class="span4 offset4">
+                    <h1>Create a New Site</h1>
+                </div>
+            </div>
+            {% block notices %}
+            <div class="row-fluid {% if notices|length < 1 %}hide{% endif %}">
+                <div class="span4 offset4">
+                    {% for notice in notices  %}
+                        {{ notice }}
+                    {% endfor %}
+                </div>
+            </div>
+            {% endblock %}
+            <div class="row-fluid">
+                <form action="{{ path('cms_core.site_save') }}" method="POST" class="span4 offset4">
+                    <input type="hidden" name="token" id="input-token" value="{{ token }}"/>
+                    <div id="new-domain" class="row-fluid">
+                        <label for="input-domain-new">New Domain Name:</label>
+                        <input type="text" id="input-domain-new" name="domain" class="span12 check-domain" placeholder="Enter your desired domain name here"/>
+                        <span class="pull-right">Already have a domain? <a href="#"class="switch-domain-type">click here</a></span>
+                    </div>
+                    <div id="old-domain" class="hide row-fluid">
+                        <label for="input-domain">Your Domain Name:</label>
+                        <input type="text" name="domain-new" id="input-domain" class="span12 check-domian" placeholder="Enter your domain name here"/>
+                        <span class="pull-right"><a href="#" class="switch-domain-type">Get a new domain</a></span>
+                    </div>
+                    <div class="row-fluid">
+                        <label for="name">Site Name:</label>
+                        <input type="text" name="name" id="input-name" class="check-namespace span12" placeholder="Enter name here"/>
+                    </div>
+                    <button class="btn btn-info pull-right">Create New Site</button>
+                </form>
             </div>
         </div>
-        {% block notices %}
-            {% for notice in notices  %}
-                {{ notice }}
-            {% endfor %}
-        {% endblock %}
-        <div class="row-fluid">
-            <form action="{{ path('cms_core.site_save') }}" method="POST" class="span12">
-                <input type="hidden" name="token" id="input-token" value="{{ token }}"/>
-                <div id="new-domain" class="row-fluid">
-                    <label for="input-domain-new">New Domain Name:</label>
-                    <input type="text" id="input-domain-new" name="domain" class="span12 check-domain" placeholder="Enter your desired domain name here"/>
-                    <span class="pull-right">Already have a domain? <a href="#"class="switch-domain-type">Click here</a> to use it</span>
-                </div>
-                <div id="old-domain" class="hide row-fluid">
-                    <label for="input-domain">Your Domain Name:</label>
-                    <input type="text" name="domain-new" id="input-domain" class="span12 check-domian" placeholder="Enter your domain name here"/>
-                    <span class="pull-right"><a href="#" class="switch-domain-type">Get a new domain</a></span>
-                </div>
-                <div class="row-fluid">
-                    <label for="name">Site Name:</label>
-                    <input type="text" name="name" id="input-name" class="check-namespace span12" placeholder="Enter name here"/>
-                </div>
-                <button class="btn btn-info pull-right">Create New Site</button>
-            </form>
-        </div>
     </div>
+    {% block footer %}
+        {{ parent() }}
+    {% endblock %}
     <input type="hidden" id="path-unique-namespace" value="{{ path('cms_core.site_unique_namespace') }}"/>
     <input type="hidden" id="path-unique-domain" value="{{ path('cms_core.site_unique_domain') }}"/>
 {% endblock %}
