rearragned mock dashbaord a bit

--- a/src/Cms/CoreBundle/Resources/views/Site/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Site/index.html.twig
@@ -22,15 +22,15 @@
     <div class="row-fluid row-holder">
         <div class="span6">
             <div class="holder">
-                <i class="icon-sun icon-2x"></i>
-                <h3>Something Here</h3>
+                <i class="icon-book icon-2x"></i>
+                <h3>Content</h3>
                 <p>You can do something great on the dashboard here. Bacon ex doner, aliqua veniam chicken ullamco tail tri-tip anim dolore est pork belly filet mignon andouille.</p>
             </div>
         </div>
         <div class="span6">
             <div class="holder">
-                <i class="icon-cog icon-2x"></i>
-                <h3>Something Else Here</h3>
+                <i class="icon-camera-retro icon-2x"></i>
+                <h3>Media</h3>
                 <p>You can do something else great on the dashboard here.  Proident laboris et adipisicing kielbasa pork chop Consectetur velit flank tri-tip officia doner pork belly</p>
             </div>
         </div>
@@ -38,15 +38,15 @@
     <div class="row-fluid row-holder">
         <div class="span6">
             <div class="holder">
-                <i class="icon-dashboard icon-2x"></i>
-                <h3>Very Cool Thing</h3>
+                <i class="icon-eye-open icon-2x"></i>
+                <h3>Themes</h3>
                 <p>Click on this very cool thing and something very cool will happen. Et pancetta irure, cillum ball tip esse ham hock aDolore capicola ex turducken id.</p>
             </div>
         </div>
         <div class="span6">
             <div class="holder">
-                <i class="icon-bullseye icon-2x"></i>
-                <h3>Other Interesting Thing</h3>
+                <i class="icon-list icon-2x"></i>
+                <h3>Menus</h3>
                 <p>Click on this very cool thing and something very cool will happen. Chuck officia bresaola ut aliqua, meatball deserunt corned beef turducken ut mollit cow non</p>
             </div>
         </div>
@@ -54,15 +54,15 @@
     <div class="row-fluid row-holder">
         <div class="span6">
             <div class="holder">
-                <i class="icon-compass icon-2x"></i>
-                <h3>Something Here</h3>
+                <i class="icon-group icon-2x"></i>
+                <h3>Users</h3>
                 <p>You can do something great on the dashboard here. Bacon ex doner, aliqua veniam chicken ullamco tail tri-tip anim dolore est pork belly filet mignon andouille.</p>
             </div>
         </div>
         <div class="span6">
             <div class="holder">
-                <i class="icon-asterisk icon-2x"></i>
-                <h3>Something Else Here</h3>
+                <i class="icon-cog  icon-2x"></i>
+                <h3>Settings</h3>
                 <p>You can do something else great on the dashboard here.  Proident laboris et adipisicing kielbasa pork chop Consectetur velit flank tri-tip officia doner pork belly</p>
             </div>
         </div>
